# BIOLES-Robot

Bioles/: readme
Bioles/bioles_interfaces/: CMakeLists.txt  package.xml
Bioles/bioles_robot/: package.xml  setup.cfg  setup.py
Design/: base_link.SLDASM  l_link1.SLDASM  l_link10.SLDASM  l_link11.SLDASM  l_link12.SLDASM  l_link13.SLDASM  l_link2.SLDASM  l_link3.SLDASM  l_link4.SLDASM  l_link5.SLDASM  l_link6.SLDASM  l_link7.SLDASM  l_link8.SLDASM  l_link9.SLDASM  r_link1.SLDASM  r_link10.SLDASM  r_link11.SLDASM  r_link12.SLDASM  r_link13.SLDASM  r_link2.SLDASM  r_link3.SLDASM  r_link4.SLDASM  r_link5.SLDASM  r_link6.SLDASM  r_link7.SLDASM  r_link8.SLDASM  r_link9.SLDASM
Design/part/: 2mm.SLDPRT  5mm_fix hole.SLDPRT  BPF_BU.SLDPRT  BPF_WA.SLDPRT  DGS-3399_servo.SLDPRT  DGS-3399_servo_bracket.SLDPRT  Hitec HS-325HB Korpus.SLDPRT  IMU_connect_1.SLDPRT  IMU_connect_2.SLDPRT  IMU_sensor.SLDPRT  Kachalka.SLDPRT  absolute_encoder.SLDPRT  arduino_connect_1.SLDPRT  arduino_connect_2.SLDPRT  bearing_connect_1.SLDPRT  bearing_connect_2.SLDPRT  body_1+arm.SLDPRT  body_2+arm.SLDPRT  body_3+arm.SLDPRT  bracket_1.SLDPRT  bracket_2.SLDPRT  bracket_3.SLDPRT  busch_8mm.SLDPRT  cam.SLDPRT  cam_leg_1_2.SLDPRT  cam_leg_1_2_r.SLDPRT  cam_leg_2_2.SLDPRT  cam_leg_2_2_r.SLDPRT  dc_motor.SLDPRT  gear_1.5_12.SLDPRT  gear_1.5_24.SLDPRT  gear_1.5_36.SLDPRT  gear_connect.SLDPRT  leg0_1.SLDPRT  leg0_2.SLDPRT  leg0_3.SLDPRT  leg_1.SLDPRT  leg_1_double.SLDPRT  leg_2.SLDPRT  (+33 more)
Simulation/: readme
plugin/jumprobot_joint_control/: CMakeLists.txt  jumprobot_joint_control.cc  jumprobot_joint_control.hh
(+38 files in other folders)
